--- a/public/views/laboratorista/editar.html
+++ b/public/views/laboratorista/editar.html
@@ -18,31 +18,61 @@
             <td class="unidades"> {{examen.unidades}}  </td>
             <td class="resultado"> {{examen.resultado}}  </td>
             <td class="valores_referencia"> {{examen.valores_referencia}}  </td>
-            <td class= "editar"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalEditarExamen">editar</button></td>
+            <td class= "editar"><button type="button" class="btn btn-primary" data-toggle="modal" ng-click="abrir()" data-target="#modalEditarExamen">editar</button></td>
         </tr>
     </tbody>
   </table>
 </div>
 
-<!-- Modal de editar examen-->
-<form id="formEditarExamen" >
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <h4 class="modal-title" id="titulo_form"></h4>
-  </div>
-  <div class="modal-body">
-      <div class="form-group">
-        <input type="text" class="form-control" id="unidades" name="unidades" placeholder="Unidades" >
+<!-- Modal Structure -->
+<div id="modal1" class="modal bottom-sheet">
+  <div class="modal-content">
+    <!-- Modal de editar examen-->
+    <form id="formEditarExamen" >
+      <div class="modal-body">
+          <div class="form-group">
+            <input type="text" class="form-control" id="unidades" name="unidades" placeholder="Unidades" >
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" id="resultado" name="resultado" placeholder="Resultado">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" id="valores_referencia" name="valores_referencia" placeholder="Valores de referencia">
+          </div>
       </div>
-      <div class="form-group">
-        <input type="text" class="form-control" id="resultado" name="resultado" placeholder="Resultado">
+      <div class="row modal-footer">
+        <button type="button" class="btn col s4  red accent-4 left btn-default" data-dismiss="modal">Cancelar</button>
+        <button type="submit" class="btn col s4 btn-primary">Aceptar</button>
       </div>
-      <div class="form-group">
-        <input type="text" class="form-control" id="valores_referencia" name="valores_referencia" placeholder="Valores de referencia">
+    </form>
+  </div>
+</div>
+
+<div ng-click="openAdd()" class="fixed-action-btn" style="bottom: 55px; right: 55px;">
+  <a class="btn-floating btn-large red">
+    <i class="large material-icons">add</i>
+  </a>
+</div>
+
+  <!-- Modal Structure -->
+  <div id="modal2" class="modal modal-fixed-footer">
+    <div class="modal-content">
+      <form id="formEditarExamen" >
+      <div class="modal-body">
+          <div class="form-group">
+            <input type="text" class="form-control" id="unidades" name="unidades" placeholder="Unidades" >
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" id="resultado" name="resultado" placeholder="Resultado">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" id="valores_referencia" name="valores_referencia" placeholder="Valores de referencia">
+          </div>
       </div>
+      <div class="row modal-footer">
+        <button type="button" class="btn col s4  red accent-4 left btn-default" data-dismiss="modal">Cancelar</button>
+        <button type="submit" class="btn col s4 btn-primary">Aceptar</button>
+      </div>
+    </form>
+    </div>
   </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-    <button type="submit" class="btn btn-primary">Aceptar</button>
-  </div>
-</form>
