Se han actualizado todas las vistas

--- a/public/views/laboratorista/editar.html
+++ b/public/views/laboratorista/editar.html
@@ -60,6 +60,9 @@
       <form id="formEditarExamen" >
       <div class="modal-body">
           <div class="form-group">
+            <input type="text" class="form-control" id="parametro" name="parametro" placeholder="Parametro" >
+          </div>
+          <div class="form-group">
             <input type="text" class="form-control" id="unidades" name="unidades" placeholder="Unidades" >
           </div>
           <div class="form-group">
@@ -69,7 +72,7 @@
             <input type="text" class="form-control" id="valores_referencia" name="valores_referencia" placeholder="Valores de referencia">
           </div>
       </div>
-      <div class="row modal-footer">
+      <div class="row modal-footer" style="right:1px">
         <button type="button" class="btn col s4  red accent-4 left btn-default" data-dismiss="modal">Cancelar</button>
         <button type="submit" class="btn col s4 btn-primary">Aceptar</button>
       </div>
