--- a/views/app/footer.ejs
+++ b/views/app/footer.ejs
@@ -6,7 +6,7 @@
 
 
     </div>
-    <div class="col l3 s12">
+    <div class="col l3 s12 right">
       <h5 class="white-text">Settings</h5>
       <ul>
         <li><a class="white-text" href="#!">Link 1</a></li>
@@ -19,6 +19,6 @@
 </div>
 <div class="footer-copyright">
   <div class="container">
-    Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+    Made by <a class="brown-text text-lighten-3" href="http://facebook.com">Valor Team</a>
   </div>
 </div>
