--- a/views/laboratorista.ejs
+++ b/views/laboratorista.ejs
@@ -1,27 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>Salud Primero - Laboratorista</title>
-
-    <!-- CSS  -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="styles/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="styles/styles.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-      <!-- Angular views -->
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.2.1/angular-materialize.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
+    <% include app/scripts %>
     <script type="text/javascript" src="scripts/lview.js"></script>
   </head>
 
   <body ng-app="appMuestras">
     <div id="errorLogin" class="alert alert-danger collapse" role="alert"></div>
-    
 
     <header class="container">
       <% include user/sideLaboratorista %>
@@ -54,9 +40,5 @@
     <script src="scripts/init.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs/dt-1.10.12/datatables.min.js"></script>
-  </body>
-
-
 </body>
-
 </html>
