--- a/views/paciente.ejs
+++ b/views/paciente.ejs
@@ -2,90 +2,50 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Centros M&eacute;dicos</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-    
-    <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
-    
-    <link rel="stylesheet" href="../styles/styles.css">
-    <link rel="stylesheet" href="../styles/estiloPac.css">
-    
-    
-    <style>
-        body{
-            min-width: 330px;
-            /*background: url(Imagenes/"laboratorio.jpg") no-repeat center center;*/
-            background-size: cover;
-            background-attachment: fixed;
-            font-family: 'Ubuntu', sans-serif;
-        }
-    </style>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>-->
-    
-    <script type="text/javascript" src="../scripts/script.js"></script>
-    
-   
-
+    <title>Salud Primero - Paciente </title>
+    <% include app/scripts %>
+    <link rel="stylesheet" href="styles/estiloPac.css">
+    <script type="text/javascript" src="scripts/script.js"></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Online Lab</a>
+    <div id="errorLogin" class="alert alert-danger collapse" role="alert"></div>
+    <header class="container">
+      <% include user/sidePaciente %>
+    </header>
+
+    <main>
+        <% include app/header %>
+        <div id="index-banner" class="parallax-container">
+          <div class="section no-pad-bot">
+            <div class="container">
+              <br><br>
+              <h1 class="header center indigo-text text-lighten-2"><%= nombre %> <%= apellido %></h1>
+              <br><br>
             </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <!--<li class="active"><a href="#inicio">Inicio</a></li>-->
-                    <li><a href="#">Mis Ex&aacute;menes</a></li>
-                    <li><a href="#">Centros M&eacute;dicos</a></li>
-                    <li><a href="#">Mis Datos</a></li>
-                    <li><a href="/logout"><span class="glyphicon glyphicon-off"></span></a></li>
-                </ul>
-            </div>
-            <!--/.nav-collapse -->
+          </div>
+          <div class="parallax"><img src="imagenes/main3.jpg"></div>
         </div>
-    </nav>
-    
-    <section id="contenido">
+
+        <ui-view></ui-view>
         
-        <h2 class="container-fluid">Cargar Contenido</h2>
-
-        <div id="centros-medicos" class="articulo container">
-            <h3>Centros M&eacute;dicos</h3>
-            <hr>
-        </div>
-
-            
-    </section>
-    
-
-    
-
-    <footer class="footer">
-        <div class="container">
-            <p class="copyright text-muted small">Copyright &copy; 2016. Todos los derechos reservados</p>
-        </div>
+        <section id="contenido">
+            <h2 class="container-fluid">Cargar Contenido</h2>
+            <div id="centros-medicos" class="articulo container">
+                <h3>Centros M&eacute;dicos</h3>
+                <hr>
+            </div>
+        </section>
+    </main>
+    <footer class="page-footer teal">
+        <% include app/footer %>
     </footer>
-
+    <!--  Scripts-->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="scripts/materialize.js"></script>
+    <script src="scripts/init.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs/dt-1.10.12/datatables.min.js"></script>
 </body>
 
 </html>
