--- a/views/app/footer.ejs
+++ b/views/app/footer.ejs
@@ -19,6 +19,6 @@
 </div>
 <div class="footer-copyright">
   <div class="container">
-    Made by <a class="brown-text text-lighten-3" href="http://facebook.com">Valor Team</a>
+    Made by <a class="brown-text text-lighten-3" href="https://www.facebook.com/naomi.castillo.9480?fref=ts">Valor Team</a>
   </div>
 </div>
