--- a/views/user/sideOperario.ejs
+++ b/views/user/sideOperario.ejs
@@ -6,7 +6,7 @@
       <a href="#"><span class="white-text email">Operario</span></a>
     </div>
   </li>
-  <li><a class="waves-effect" ui-sref="examenes({id:5})"><i class="material-icons">input</i>Registrar Paciente</a></li>
+  <li><a class="waves-effect" ui-sref="reg"><i class="material-icons">input</i>Registrar Paciente</a></li>
   <li><div class="divider"></div></li>
   <li><a class="waves-effect" ui-sref="examenes({id:5})"><i class="material-icons">view_list</i>Registrar Muestra Medica</a></li>
   <li><div class="divider"></div></li>
