--- a/views/laboratorista.ejs
+++ b/views/laboratorista.ejs
@@ -25,8 +25,10 @@
           </div>
           <div class="parallax"><img src="imagenes/main2.jpg"></div>
         </div>
-
-        <ui-view></ui-view>
+        
+        <div class="container">
+          <ui-view></ui-view>
+        </div>
 
     </main>
 
