whenwhenwhenwhenwhenwhne ya comimos

--- a/public/styles/materialize.css
+++ b/public/styles/materialize.css
@@ -5287,7 +5287,7 @@ button.btn-floating {
   right: 0;
   background-color: #fafafa;
   padding: 0;
-  max-height: 70%;
+  max-height: 525px;
   width: 55%;
   margin: auto;
   overflow-y: auto;
