--- a/public/views/laboratorista/editar.html
+++ b/public/views/laboratorista/editar.html
@@ -1,5 +1,5 @@
 <div class="container examenes">
-  <h2>Examenes</h2>
+  <h2>Examen</h2>
   <table id="tablaExamenes" class="table table-bordered table-striped">
     <thead>
       <tr>
