--- a/views/laboratorista.ejs
+++ b/views/laboratorista.ejs
@@ -3,7 +3,7 @@
   <head>
     <title>Salud Primero - Laboratorista</title>
     <% include app/scripts %>
-    <script type="text/javascript" src="scripts/lview.js"></script>
+    <script type="text/javascript" src="scripts/laboratorist/lview.js"></script>
   </head>
 
   <body ng-app="appMuestras">
