--- a/views/user/sideOperario.ejs
+++ b/views/user/sideOperario.ejs
@@ -1,16 +1,16 @@
 <ul id="slide-out" class="side-nav fixed">
   <li class="">
     <div class="userView red darken-1">
-      <a href="#"><img class="circle" src="images/1.jpg"></a>
+      <a href="#"><img class="circle" src="imagenes/1.jpg"></a>
       <a href="#"><span class="white-text name"><%= nombre %> <%= apellido %></span></a>
       <a href="#"><span class="white-text email">Operario</span></a>
     </div>
   </li>
-  <li><a class="waves-effect" ui-sref="regp"><i class="material-icons">input</i>Registrar Paciente</a></li>
+  <li><a class="waves-effect" ui-sref="RegistrarPaciente"><i class="material-icons">input</i>Registrar Paciente</a></li>
   <li><div class="divider"></div></li>
-  <li><a class="waves-effect" ui-sref="regm"><i class="material-icons">view_list</i>Registrar Muestra Medica</a></li>
+  <li><a class="waves-effect" ui-sref="RegistrarMuestra"><i class="material-icons">view_list</i>Registrar Muestra Medica</a></li>
   <li><div class="divider"></div></li>
-  <li><a class="waves-effect" ui-sref="reportes"><i class="material-icons">assessment</i>Graficos Estadisticos</a></li>
+  <li><a class="waves-effect" ui-sref="Reportes"><i class="material-icons">assessment</i>Graficos Estadisticos</a></li>
   <li><div class="divider"></div></li>
   <li><a class="waves-effect" href="/logout"><i class="material-icons">power_settings_new</i>Salir</a></li>
 </ul>
