--- a/views/operario.ejs
+++ b/views/operario.ejs
@@ -15,6 +15,17 @@
 
     <main>
       <% include app/header %>
+      <div id="index-banner" class="parallax-container">
+        <div class="section no-pad-bot">
+          <div class="container">
+            <br><br>
+            <h1 class="header center indigo-text text-lighten-2">Welcome Back</h1>
+            <br><br>
+          </div>
+        </div>
+        <div class="parallax"><img src="imagenes/main1.jpg"></div>
+      </div>
+      
       <div class="container">
         <ui-view></ui-view>
       </div>
