--- a/views/user/sideLaboratorista.ejs
+++ b/views/user/sideLaboratorista.ejs
@@ -1,7 +1,7 @@
 <ul id="slide-out" class="side-nav fixed">
   <li class="">
     <div class="userView indigo">
-      <a href="#"><img class="circle" src="images/1.jpg"></a>
+      <a href="#"><img class="circle" src="imagenes/1.jpg"></a>
       <a href="#"><span class="white-text name"><%= nombre %> <%= apellido %></span></a>
       <a href="#"><span class="white-text email">Laboratorista</span></a>
     </div>
