--- a/public/views/operario/registrarMuestra.html
+++ b/public/views/operario/registrarMuestra.html
@@ -1,14 +1,22 @@
 <section id="contenido">
-    <div id="muestras" class="muestras container">
-        <h3>Muestras</h3>
-        <hr>
-        <table class="table table-bordered tabla-resultado">
-            <tr class="text-center">
-                <th>#</th>
-                <th>Descripción</th>
-                <th>Código</th>
-                <th>Estado</th>
-            </tr>
-        </table>
-    </div>
+    <form id="formularioCrearMuestra" method="post" action="/examen">
+            <fieldset>
+                <legend>Agregar una muestra</legend>
+                Paciente: <input list="pctes" name="paciente">
+                <datalist id="pctes">
+                    <option value="Lenin Tenecela">
+                    <option value="Guido Duchi">
+                    <option value="Paciente1">
+                </datalist>
+                Muestra: <input list="muestras" name="muestra">
+                <datalist id="muestras">
+                    <option value="Sangre">
+                    <option value="Orina">
+                    <option value="Heces">
+                </datalist>
+                Nombre: <input type="text" name="nombre" require/><br />
+                <input type="submit" value="Enviar">
+                <input type="reset" value="Borrar">
+            </fieldset>
+        </form>
 </section>
