--- a/public/views/paciente/datos.html
+++ b/public/views/paciente/datos.html
@@ -1,7 +1,7 @@
 <div class="section no-pad-bot">
   <div class="container">
     <div class="row center">
-      <form class="col s12" id="formularioCrearPaciente" action="/paciente" method="post">
+      <form class="col s12" id="formularioActualizarPaciente" action="/paciente/:id" method="put">
         <h4>Actualice sus Datos</h4>
             <div class='row'>
               <div class='input-field col s12'>
