se actualizo la relacion de muestras-paciente

--- a/views/user/sideLaboratorista.ejs
+++ b/views/user/sideLaboratorista.ejs
@@ -3,7 +3,7 @@
     <div class="userView indigo">
       <a href="#"><img class="circle" src="images/1.jpg"></a>
       <a href="#"><span class="white-text name"><%= nombre %> <%= apellido %></span></a>
-      <a href="#"><span class="white-text email">Laboratorista</span></a>
+      <a href="#"><span class="white-text email"> <%= tipo %> </span></a>
     </div>
   </li>
   <li><a class="waves-effect" href="#"><i class="material-icons">view_column</i>Muestras</a></li>
