front end paciente

--- a/public/views/paciente/centros.html
+++ b/public/views/paciente/centros.html
@@ -1,6 +1,11 @@
 <section id="contenido">
     <div id="centros-medicos" class="articulo container">
-        <h3>Centros M&eacute;dicos</h3>
+        <h4>Centros M&eacute;dicos</h4>
+        <div class="item" ng-repeat="centro in centros">
+        	<a href="#"> Centro: {{centro.nombre}} </a> 
+       	<div>
+    </div>
+
     	<hr>
     </div>
 </section>
